add noder, node-uuid; update riak-js and package.json info

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "noder",
-  "description": "Node.js Simple Web Utility",
+  "name": "opennodes",
+  "description": "Node.js Modules Introduction",
   "version": "0.0.4",
   "author": {
     "name": "Simon Su",
